--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  },
   "include": ["./src/**/*.ts"],
   "exclude": ["node_modules", "dist", "__tests__", "coverage"]
 }
