--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "prettier": "2.6.2",
     "standard-version": "9.3.2",
     "ts-node": "10.7.0",
+    "tsconfig-paths": "^3.14.1",
     "typescript": "4.6.3"
   }
 }
