--- a/package.json
+++ b/package.json
@@ -6,22 +6,16 @@
   "scripts": {
     "gen": "npx playwright codegen --output",
     "testgen": "npx playwright test",
-    "api": "DEBUG=pw:api cucumber-js",
-    "check": "npm run format && npm run lint && tsc && npm run cucumber-check",
-    "cucumber-check": "cucumber-js features/**/*.feature --dry-run --require env/set-environment-variables.ts --require world/custom-world.ts --require step-definitions/**/*.ts --require hooks/**/*.ts  --require-module ts-node/register --format-options \"{\\\"snippetInterface\\\": \\\"async-await\\\"}\" --format summary --format progress --format progress-bar  --publish-quiet",
-    "debug": "PWDEBUG=1 DEBUG=pw:api cucumber-js",
-    "video": "PWVIDEO=1 cucumber-js",
+    "check": "npm run format && npm run lint && tsc --noEmit",
     "eslint-fix": "eslint ./ --ext .js,.ts,.tsx --fix",
     "eslint-init": "eslint --init",
     "format": "prettier --write \"**/*.{ts,tsx,css,html}\" ",
     "lint": "eslint ./ --ext .js,.ts,.tsx --format visualstudio --no-color --report-unused-disable-directives",
-    "only": "npm run cucumber -- --tags @only",
-    "report": "open reports/report.html",
-    "snippets": "cucumber-js features/**/*.feature --dry-run --format snippets",
-    "steps-usage": "cucumber-js features/**/*.feature --dry-run",
-    "all": "cucumber-js features/**/*.feature",
-    "test": "cucumber-js",
-    "test:parallel": "cucumber-js --parallel=2",
+    "precucumber": "rimraf reports && mkdir reports && echo {} > reports/report.json",
+    "transpile": "rimraf dist && babel --extensions .ts --out-dir dist src",
+    "cucumber": "npm run transpile && cucumber-js",
+    "tests": "./run-tests.sh",
+    "postcucumber": "ts-node ./src/reporters/cucumber.ts",
     "allure": "allure serve reports/allure-results"
   },
   "keywords": [],
@@ -31,7 +25,6 @@
     "node": ">=14"
   },
   "dependencies": {
-    "@cucumber/cucumber": "8.0.0",
     "@cucumber/html-formatter": "19.0.0",
     "@cucumber/messages": "^18.0.0",
     "@cucumber/pretty-formatter": "1.0.0-alpha.2",
@@ -40,16 +33,25 @@
     "axios": "^0.26.0",
     "cucumber-console-formatter": "1.0.0",
     "cucumber-html-reporter": "5.5.0",
+    "dotenv": "^16.0.1",
     "expect": "27.5.1",
+    "moment": "^2.29.4",
+    "mongodb": "^6.0.0",
+    "pg": "^8.10.0",
     "pixelmatch": "5.2.1",
-    "playwright": "1.20.2",
+    "playwright": "^1.31.1",
     "pngjs": "6.0.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.21.1",
+    "@babel/cli": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
+    "@cucumber/cucumber": "8.0.0",
+    "@playwright/test": "^1.31.1",
     "@types/expect": "24.3.0",
     "@types/lodash": "4.14.181",
-    "@types/node": "16.11.26",
+    "@types/node": "^16.18.12",
+    "@types/pg": "^8.6.6",
     "@types/pixelmatch": "5.2.4",
     "@types/pngjs": "6.0.1",
     "@typescript-eslint/eslint-plugin": "5.19.0",
