--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-  "window.zoomLevel": 1,
+  "[feature]": {
+    "editor.defaultFormatter": "alexkrechik.cucumberautocomplete"
+  },
   "editor.tabSize": 2,
   "files.exclude": {
     "**/.DS_Store": true,
@@ -11,7 +13,7 @@
   },
   "editor.tabCompletion": "on",
   "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
+  // "editor.formatOnSave": true,
   "editor.minimap.enabled": true,
   "editor.minimap.showSlider": "always",
   "editor.minimap.renderCharacters": true,
@@ -37,8 +39,8 @@
   "prettier.singleQuote": true,
   "prettier.trailingComma": "all",
 
-  "cucumberautocomplete.syncfeatures": "./features/**/*.feature",
-  "cucumberautocomplete.steps": ["src/steps/**/*.ts"],
+  "cucumberautocomplete.syncfeatures": "./src/features/**/**/*.feature",
+  "cucumberautocomplete.steps": ["./src/step-definitions/**/**/*.ts"],
   "typescript.tsdk": "node_modules/typescript/lib",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
